--- a/dashboard/app/views/layouts/_analytics.html.haml
+++ b/dashboard/app/views/layouts/_analytics.html.haml
@@ -1,14 +1,18 @@
 - create_params = {cookieDomain: (Rails.env.development? ? 'none' : 'auto')}
--# The following dimensions must match in order the custom dimension settings in our Google Analytics account.
-- selected_language_dim, age_dim, gender_dim, user_type_dim, env_dim, pixel_ratio, has_teacher = (1..7).map{|x|"dimension#{x}"}
+-#
+  The following dimensions must match in order the custom dimension settings in our Google Analytics account.
+  For more information, see https://support.google.com/analytics/answer/2709829?hl=en.
+- selected_language_dim, age_dim, gender_dim, user_type_dim, env_dim, pixel_ratio, has_teacher, account_age = (1..8).map{|x|"dimension#{x}"}
 - dimensions = {}
 - dimensions[selected_language_dim] = language if (accepted_languages.present? && accepted_languages.first != language)
 - dimensions[env_dim] = Rails.env
 - if user_signed_in?
+  - require 'date'
   - dimensions[age_dim] = current_user.age.to_s
   - dimensions[gender_dim] = current_user.gender
   - dimensions[user_type_dim] = current_user.user_type
   - dimensions[has_teacher] = current_user.teachers.any? ? '1' : '0'
+  - dimensions[account_age] = (DateTime.now - DateTime.parse(current_user.created_at)).to_i
   - create_params[:userId] = "#{current_user.id}#{'-dev' unless Rails.env.production?}"
 :javascript
   // Google Analytics snippet (https://developers.google.com/analytics/devguides/collection/analyticsjs/)
