--- a/aws/cloudformation/cloud_formation_stack.yml.erb
+++ b/aws/cloudformation/cloud_formation_stack.yml.erb
@@ -233,6 +233,16 @@ Resources:
       ReceiveMessageWaitTimeSeconds: 20
       VisibilityTimeout: 15
       QueueName: <%="activities_dead-#{stack_name}"%>
+  FileSystem:
+    Type: AWS::EFS::FileSystem
+<% azs.each do |az| %>
+  FileSystemMount<%=az%>
+    Type: AWS::EFS::MountTarget
+    Properties:
+      FileSystemId: {Ref: FileSystem}
+      SubnetId: {'Fn::GetAtt' => ['VPC', "Subnet#{az}"]}}
+      SecurityGroups: ['Fn::GetAtt': [VPC, EFSSecurityGroup]]
+<% end -%>
 Outputs:
   DashboardURL:
     Value: "https://dashboard-<%=subdomain%>"
