--- a/aws/cloudformation/cloud_formation_adhoc_standalone.yml.erb
+++ b/aws/cloudformation/cloud_formation_adhoc_standalone.yml.erb
@@ -17,6 +17,7 @@ Resources:
   VPC: <%= lambda_fn.call 'LookupStackOutputs', StackName: 'VPC' %>
   IAM: <%= lambda_fn.call 'LookupStackOutputs', StackName: 'IAM' %>
   AMI: <%= lambda_fn.call 'LookupStackOutputs', StackName: "AMI-#{environment}" %>
+  EFS: <%= lambda_fn.call 'LookupStackOutputs', StackName: "EFS-#{environment}" %>
   WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
